fixed alignment of navigation items to center

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -32,6 +32,7 @@
   margin-right: 10px;
   margin-bottom:9.5px;
   justify-content: space-between;
+  align-items: center;
 }
 
 a {
